# RLM

./: .gitignore  README.md  RLM_Research_Document.md  codebase review  continuity_report.md  example_acc.py  main.py  pyproject.toml  requirements.txt  run_gridworld.py
RLM/: __init__.py  acc_repl.py  agent_controller.py  engine_repl.py  integrated_repl.py  interface.py  memory_repl.py  models.py  repl.py  rlm.py  rlm_repl.py  verify_integration.py  verify_memory.py  verify_rlm_engine.py
RLM/acc/: README.md  __init__.py  complexity.py  controller.py  models.py
RLM/engine/: __init__.py  rlm_engine.py  templates.py
RLM/environments/: __init__.py  gridworld.py
RLM/experiments/: __init__.py  action_parser.py  analysis.py  gridworld_runner.py
RLM/logger/: repl_logger.py  root_logger.py
RLM/memory/: __init__.py  base.py  retrieval.py  system.py
RLM/utils/: llm.py  prompts.py  utils.py
TimeXL/: timexl_full.ipynb
api/: engine_api.py  main.py  memory_api.py
benchmark/: __init__.py  hotpotqa_runner.py  metrics.py
benchmark/results/: baseline_1775202570.json  baseline_1775206729.json  baseline_1775207423.json  enhanced_1775202593.json  enhanced_1775202945.json  enhanced_1775204013.json  enhanced_1775208163.json
dashboard/: app.py
results/: config.json  episodes_adaptive.csv  episodes_baseline.csv  episodes_fixed_deep.csv  episodes_fixed_shallow.csv  steps_adaptive.csv  steps_baseline.csv  steps_fixed_shallow.csv  summary.json
results/plots/: metrics.json
tests/: test_acc.py  test_gridworld.py
